Bug 478636 - kaddressbook's locale magic ruins postal addresses
Summary: kaddressbook's locale magic ruins postal addresses
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: 5.19.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-17 10:28 UTC by Martin Zbořil
Modified: 2023-12-17 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.0
Sentry Crash Report:


Attachments
setting and displaying of broken address in 3 steps (135.21 KB, image/png)
2023-12-17 10:28 UTC, Martin Zbořil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Zbořil 2023-12-17 10:28:30 UTC
Created attachment 164244 [details]
setting and displaying of broken address in 3 steps

SUMMARY
kaddressbook's address book disregards some of user input.

STEPS TO REPRODUCE
1. have a locale's language settings set to UK, everything else to CZ
2. add or edit an address, select Czech republic (screenshot, see its position in the list
3. write this bug-report

OBSERVED RESULT
incorrect, nonexistent address from a valid input

EXPECTED RESULT
having what was inputted

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.7
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-91-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
$ locale
locale: LC_ALL nelze nastavit na výchozí národní prostředí: Adresář nebo soubor neexistuje
LANG=cs_CZ.UTF-8
LANGUAGE=en_GB:cs
LC_CTYPE="cs_CZ.UTF-8"
LC_NUMERIC="cs_CZ.UTF-8"
LC_TIME=en_SE.UTF-8
LC_COLLATE="cs_CZ.UTF-8"
LC_MONETARY=cs_CZ.UTF-8
LC_MESSAGES="cs_CZ.UTF-8"
LC_PAPER="cs_CZ.UTF-8"
LC_NAME="cs_CZ.UTF-8"
LC_ADDRESS="cs_CZ.UTF-8"
LC_TELEPHONE="cs_CZ.UTF-8"
LC_MEASUREMENT=cs_CZ.UTF-8
LC_IDENTIFICATION="cs_CZ.UTF-8"
LC_ALL=
Comment 1 Laurent Montel 2023-12-17 10:57:46 UTC
Hi,
perhaps you can explain when do you expect :)
Regards
Comment 2 Martin Zbořil 2023-12-17 12:42:02 UTC
(In reply to Laurent Montel from comment #1)
> Hi,
> perhaps you can explain when do you expect :)
> Regards

address as inputed, perhaps you haven't seen it ;)
Comment 3 Laurent Montel 2023-12-17 13:34:25 UTC
oh you spoke about "united kingdom" ?
Comment 4 Martin Zbořil 2023-12-17 13:43:23 UTC
its a weird issue, it only happens to me when I select Czech Republic as country (which is where I live, so its not exactly rare issue for me) You can see this in attached screenshot.
I'll try to replicate this in a new user profile with default locale, later today maybe.
Comment 5 Laurent Montel 2023-12-17 13:44:34 UTC
I can reproduce bug with this combobox
I will try to fix it soon.
For example we can see "Europe" or "World" ????
Comment 6 Laurent Montel 2023-12-17 17:42:59 UTC
Git commit 2cf55e32918b0e5a9c11920285781204fde8c0e3 by Laurent Montel.
Committed on 17/12/2023 at 18:41.
Pushed by mlaurent into branch 'master'.

Fix 478636: kaddressbook's locale magic ruins postal addresses

KContact uses KCountry for list of country.
We need to use the same.
Otherwise list will be unsync
FIXED-IN: 6.0.0

M  +1    -0    src/akonadi-contacts-widgets/CMakeLists.txt
M  +3    -12   src/akonadi-contacts-widgets/editor/addresseditor/addresslocationwidget.cpp
M  +1    -1    src/akonadi-contacts-widgets/editor/addresseditor/autotests/CMakeLists.txt

https://invent.kde.org/pim/akonadi-contacts/-/commit/2cf55e32918b0e5a9c11920285781204fde8c0e3