Fix 478636: kaddressbook's locale magic ruins postal addresses

KContact uses KCountry for list of country.
We need to use the same.
Otherwise list will be unsync

BUG: 478636
FIXED-IN: 6.0.0